--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-client": "^1.0.0-rc.5",
-    "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.2",
+    "apollo-client": "^2.6.4",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
     "express-force-ssl": "^0.3.2",
-    "graphql-tag": "^1.3.1",
-    "react": "^15.4.2",
-    "react-apollo": "^1.0.0-rc.3",
-    "react-dom": "^15.4.2",
-    "react-helmet": "^5.0.0",
-    "react-modal": "^1.7.3",
+    "graphql-tag": "^2.10.1",
+    "react": "^16.10.1",
+    "react-apollo": "^3.1.1",
+    "react-dom": "^16.10.1",
+    "react-helmet": "^5.2.1",
+    "react-modal": "^3.10.1",
     "react-router": "2.8.0",
-    "react-router-dom": "^4.0.0",
-    "shortid": "^2.2.8",
-    "styled-components": "^1.4.4",
-    "tachyons": "^4.6.2"
+    "react-router-dom": "^5.1.1",
+    "shortid": "^2.2.15",
+    "styled-components": "^4.4.0",
+    "tachyons": "^4.11.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
